add: html 만드는 중..

--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <title><%= htmlWebpackPlugin.options.title %></title>
+  </head>
 
-<head>
-    <title>
-        <%= htmlWebpackPlugin.options.title %>
-    </title>
-</head>
-
-<body>
-
-</body>
-
+  <body>
+    <div class="wrapper">
+      <section class="image-section">
+        <div>
+          <p>제목</p>
+          <p>부제목</p>
+          <p>태그</p>
+        </div>
+      </section>
+      <section class="switch-section">
+        <input type="checkbox" id="switch" />
+        <label for="switch" class="switch-label">
+          <span class="circle"></span>
+        </label>
+      </section>
+      <section class="button-section">
+        <section class="text-section">
+          <button>제목</button>
+          <button>부제목</button>
+          <button>태그</button>
+        </section>
+        <section class="background-button-section">
+          <button>단색</button>
+          <button>그라데이션</button>
+          <button>이미지</button>
+        </section>
+        <section class="backgroud-color-section">
+          <button>color1</button>
+          <button>color2</button>
+          <button>랜덤</button>
+        </section>
+      </section>
+      <section class="action-section">
+        <button>초기화</button>
+        <button>완료</button>
+      </section>
+    </div>
+  </body>
 </html>
