add: 제목, 부제목, 태그 넣는 곳 input으로 하고 css 설정

--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
   <body>
     <div class="wrapper">
       <section class="image-section">
-        <div>
-          <p>제목</p>
-          <p>부제목</p>
-          <p>태그</p>
-        </div>
+        <p class="title">제목자리입니당 구구절절 구구구ㅜ국절저절절</p>
+        <p class="subtitle">부제목자리</p>
+        <p class="tag">태그자리</p>
       </section>
       <section class="switch-section">
         <input type="checkbox" id="switch" />
@@ -31,9 +29,9 @@
       </section>
       <section class="button-section">
         <section class="text-section">
-          <button>제목</button>
-          <button>부제목</button>
-          <button>태그</button>
+          <input class="title" placeholder="제목" />
+          <input class="subtitle" placeholder="부제목" />
+          <input class="tag" placeholder="태그" />
         </section>
         <section class="background-button-section">
           <button>단색</button>
